# LeafView

./: .gitignore  A1.py  AddFolder.py  AddFolderView.py  App.py  App.spec  Arrange.py  Classification.py  ClassificationThread.py  Contrast.py  ContrastThread.py  Convert.py  FlowLayout.py  FolderPage.py  HomePage.py  ItemWidget.py  LeafView_version_info.txt  LeafView封装脚本.iss  MainWindow.py  MediaPage.py  README.md  Read.py  ReadThread.py  RemoveDuplication.py  RemoveDuplicationThread.py  RemoveRepeat.py  Rename.py  ReverseGeocoding.py  SettingsDialog.py  SmartArrange.py  SmartArrangeThread.py  TextRecognition.py  Thread.py  UI_UpdateDialog.py  UI_UpdateDialog.ui  Ui_MainWindow.py  Ui_MainWindow.ui  UpdateDialog.py  WriteEXIF.py  WriteExif.py  (+18 more)
_internal/: cache_location.json  leafview_config.json  rename_mapping.json
resources/json/: camera_brand_model.json  camera_lens_mapping.json  lens_model.json
resources/model/: imagenet_classes.txt
resources/stylesheet/: author.dialog.setStyleSheet.css  close_button.setStyleSheet.css
src/leafview/: __init__.py  main.py
src/leafview/controllers/: __init__.py  classification_controller.py  duplicate_finder_controller.py  media_controller.py
src/leafview/models/: __init__.py  duplicate_result.py  media_item.py
src/leafview/threads/: __init__.py  duplicate_finder_thread.py  media_thread.py
src/leafview/utils/: __init__.py  config.py  logger.py
src/leafview/views/: __init__.py  classification_page.py  duplicates_page.py  main_window.py  media_page.py  ui_main_window.py
test/: final_performance_test.py  integration_test.py  performance_test.py  performance_test_v2.py  test_final_algorithm.py  test_fix.py
