[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leafview"
version = "1.2.0"
description = "智能媒体管理工具 - 照片视频高效管理"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yangshengzhou", email = "contact@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "PyQt6>=6.4.0",
    "Pillow>=9.5.0",
    "pillow-heif>=0.12.0",
    "opencv-python>=4.7.0",
    "scikit-image>=0.20.0",
    "imagehash>=4.3.0",
    "numpy>=1.24.0",
    "filetype>=1.2.0",
    "piexif>=1.1.3",
    "exifread>=3.0.0",
    "geopy>=2.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pyinstaller>=5.10.0",
]

[project.scripts]
leafview = "leafview.main:main"

[project.urls]
Homepage = "https://github.com/YangShengzhou03/LeafView"
Repository = "https://github.com/YangShengzhou03/LeafView"
Documentation = "https://github.com/YangShengzhou03/LeafView/blob/main/README.md"
"Bug Tracker" = "https://github.com/YangShengzhou03/LeafView/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src/leafview"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]